--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -127,6 +127,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6871b221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "200/60\n",
+    "# This will convert 200 minutes to hours by diving by 60"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3e2bd30b",
    "metadata": {},
